# ros2_armor_detector

./: .gitignore  README.md
src/aim_detector/: CMakeLists.txt  package.xml
src/aim_detector/src/: detector_node.cpp
src/aim_interfaces/: CMakeLists.txt  package.xml
src/aim_interfaces/msg/: AimInfo.msg
src/armor_detector_py/: package.xml  setup.cfg  setup.py
src/armor_detector_py/armor_detector_py/: detector_node.py
src/image_provider/: CMakeLists.txt  package.xml
src/image_provider/src/: image_publisher.cpp
